--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,34 @@
-.pokemonCard {
-  display: flex;
-  flex-direction: row;
-
-  max-width: 500px;
-}
-
-.imageWrapper {
-  flex: 1;
-}
-
-.image {
-  width: 200px;
-  height: 200px;
-}
-
-.content {
+.app {
   padding: 20px;
+}
+
+h1.title {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.pokemonList {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.pokemonItem {
+  margin: 20px;
   flex: 1;
+  cursor: pointer;
+}
+
+.pokemonImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pokemonName {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
