--- a/src/App.css
+++ b/src/App.css
@@ -86,13 +86,13 @@ h1.title {
   flex-direction: column;
   height: 100%;
 }
-.pokemonAbility {
+.detailRow {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
 }
 
-.abilityName {
+.detailTitle {
   font-size: 20px;
   margin-right: 12px;
   font-weight: bold;
