--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,8 @@ h1.title {
   flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 100px);
+  overflow-y: auto;
 }
 .detailRow {
   display: flex;
@@ -100,4 +101,9 @@ h1.title {
 
 .pokemonForms {
   flex: 1;
+}
+
+.loaderWrapper {
+  display: flex;
+  justify-content: center;
 }
