--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
 .app {
   padding: 20px;
 }
@@ -12,98 +16,4 @@ h1.title {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-.pokemonItem {
-  margin: 20px;
-  flex: 1;
-  cursor: pointer;
-}
-
-.pokemonImage {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.pokemonName {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.pokemonDetails {
-  background-color: #f8f8f8;
-  cursor: default;
-  position: fixed;
-  width: 75vw;
-  height: 75vh;
-  top: 10%;
-  left: 15%;
-  z-index: 2;
-  transition: width 0.1s ease-in-out;
-  border: 1px solid #f8f8f8;
-  box-shadow: 4px solid black;
-  display: flex;
-  flex-direction: column;
-}
-
-.pokemonDetailsHeader {
-  display: flex;
-  height: 30px;
-  padding: 10px;
-  flex-direction: row-reverse;
-}
-
-.closeButton {
-  cursor: pointer;
-}
-
-.pokemonDetailsContent {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.leftSide {
-  flex: 0.5;
-  height: 100%;
-}
-.rightSide {
-  flex: 1;
-  height: 100%;
-}
-
-.pokemonDetailsTitle {
-  font-size: 40px;
-  margin: 0;
-  text-align: center;
-}
-
-.pokemonAbilities {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 100px);
-  overflow-y: auto;
-}
-.detailRow {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-}
-
-.detailTitle {
-  font-size: 20px;
-  margin-right: 12px;
-  font-weight: bold;
-}
-
-.pokemonForms {
-  flex: 1;
-}
-
-.loaderWrapper {
-  display: flex;
-  justify-content: center;
 }
