--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
   font-family: "Source Sans Pro", sans-serif;
 }
 
@@ -16,4 +20,10 @@ h1.title {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+@media (max-width: 800px) {
+  .app {
+    padding: 0;
+  }
 }
